test/nexj/invalidbase/messages/CSV_Invalid_SameQuoteAndDelimiter.message
<Message format="CSV">
   <CSVMapping quote="," header="true"/>
   <Parts>
      <Message maxCount="0" name="Row">
         <Parts>
            <Value description="First Column" name="firstName" type="string"/>
            <Value description="Second Column" name="lastName" type="string"/>
            <Value name="age" type="integer"/>
         </Parts>
      </Message>
   </Parts>
</Message>